2005-06-05  Darin Adler  <darin@apple.com>

        Reviewed by Hyatt.

	- remove more SPI usage

        * Carbon.subproj/CarbonWindowAdapter.m: Remove a bunch of stuff.
        (+[CarbonWindowAdapter frameViewClassForStyleMask:]):
        (-[CarbonWindowAdapter initWithCarbonWindowRef:takingOwnership:disableOrdering:carbon:]):
        (-[CarbonWindowAdapter reconcileToCarbonWindowBounds]):
        (-[CarbonWindowAdapter _oldPlaceWindow:]):
        (-[CarbonWindowAdapter _termWindowIfOwner]):
        (-[CarbonWindowAdapter _windowMovedToRect:]):
        (-[CarbonWindowAdapter makeKeyWindow]):

2005-06-05  Maciej Stachowiak  <mjs@apple.com>

        - remove another forgotten include

        * Plugins.subproj/WebPluginDatabase.m:

2005-06-05  Maciej Stachowiak  <mjs@apple.com>

	- remove include that I forgot in last checkin

        * Misc.subproj/WebNSPasteboardExtras.m:

2005-06-05  Maciej Stachowiak  <mjs@apple.com>

        Reviewed by Don.

	- remove more SPI usage
	- fix <rdar://problem/3446192> CoreTranslation SPI is going away
	
        * History.subproj/WebHistoryItem.m:
        (+[WebHistoryItem _releasePageCache:]):
        * Misc.subproj/WebNSPasteboardExtras.m:
        (+[NSPasteboard initialize]):
        * WebCoreSupport.subproj/WebTextRenderer.h:
        * WebCoreSupport.subproj/WebTextRenderer.m:
        (-[WebTextRenderer _setupFont]):
        * WebView.subproj/WebPreferences.m:
        (+[WebPreferences _systemCFStringEncoding]):

2005-06-05  Maciej Stachowiak  <mjs@apple.com>

        Reviewed by Darin.

	- use WebKitSystemInterface wrappers for NSURLFileTypeMappings and NSURLResponse SPI

        * Misc.subproj/WebNSPasteboardExtras.m:
        (-[NSPasteboard _web_declareAndWriteDragImage:URL:title:archive:source:]):
        * Misc.subproj/WebNSURLExtras.m:
        (-[NSURL _webkit_suggestedFilenameWithMIMEType:]):
        * Misc.subproj/WebNSViewExtras.m:
        (-[NSView _web_dragImage:rect:event:pasteboard:source:offset:]):